--- a/product-detail.html
+++ b/product-detail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>传统黎锦桌布 - 黎藤焕彩·爱心织梦</title>
+    <title>传统黎锦香囊 - 黎藤焕彩·爱心织梦</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/product-detail.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
